# gstreamer-1

./: .anjuta_sym_db.db  Makefile  Makefile.in  README.md  config.status  configure  configure.ac  libtool
Debug/: Makefile  config.h  config.status  libtool
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile  gstreamer
Debug/src/.deps/: main.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  gstreamer  main.cc  main.cc~
src/.deps/: main.Po
